files/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
  kind: Gateway
  metadata:
    name: gateway
  spec:
  selector:
      istio: ingressgateway
      servers:
      - port:
          number: 443
          name: https
          protocol: HTTPS
        tls:
          mode: SIMPLE
          serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
          privateKey: /etc/istio/ingressgateway-certs/tls.key      
          caCertificates: /etc/istio/ingressgateway-ca-certs/example.com.chain.pem
  hosts:
  - "*.example.com"
