files/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app
spec:
  hosts:
  - "app.example.com"
  gateways:
  - gateway
  http:
  - route:
    - destination:
        host: app.default.svc.cluster.local
        port: 
          number: 8000
